<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_top"
    android:padding="21dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_the_selected_card"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/yes"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmation" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/no"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnYes"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmation" />


</androidx.constraintlayout.widget.ConstraintLayout>
